--- a/styles.css
+++ b/styles.css
@@ -10,22 +10,10 @@ body {
 
 /* utility classes*/
 
-.btn-primary {
-    background-color: #1db954;
-    color: #fff;
-
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    font-weight: bold;
-
-    padding: 15px 60px;
-    border: none;
-    border-radius: 30px;
-
-    
-
+.logo {
+  width: auto;
+  height: 40px;
 }
-
 
 #navbar {
   display: flex;
@@ -40,7 +28,7 @@ body {
 }
 
 .navbar-container {
-  width: 60%;
+  width: 80%;
   display: flex;
 
   padding: 20px 0;
@@ -54,20 +42,47 @@ body {
 
   list-style: none;
 
-  font-weight: bold;
+  font-weight: 300;
 }
 
 .navbar-container ul li {
   padding: 0 20px;
+
+  transition: all 300ms ease;
 }
 
 .navbar-container ul li:nth-child(3) {
   border-right: 1px solid white;
+  padding-right: 30px;
 }
 
-.logo {
-  width: auto;
-  height: 40px;
+.navbar-container ul li:nth-child(4) {
+  padding-left: 30px;
+}
+/* effects */
+
+.navbar-container ul li:hover {
+  color: #1db954;
+  cursor: pointer;
+}
+
+.btn-primary:hover {
+  background: #1ed768;
+  cursor: pointer;
+}
+
+.footer-menu-item:hover {
+    color: #1db954;
+    cursor: pointer;
+}
+
+.socials i:hover {
+    color: #1ed768;
+    cursor: pointer;
+}
+.about-items .item:hover {
+    color: white;
+    cursor: pointer;
 }
 
 /* showcase */
@@ -80,26 +95,129 @@ body {
   justify-content: center;
 
   color: white;
-  background: url('./img/showcase.webp') center center/cover;
-  background-color: rgba(0, 0, 0, 0.4);
+  background: url("./img/showcase.webp") center center/cover;
+  background-color: rgba(0, 0, 0, 0.7);
   background-blend-mode: color;
 }
 
 .showcase-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .showcase-container h1 {
-    font-size: 5rem;
-
+  font-size: 5rem;
+  font-weight: 500;
 }
 
 .showcase-container p {
-    margin: 15px 0;
-    font-size:1.1rem;
+  margin: 30px 0;
+  padding-bottom: 20px;
+  font-size: 1.1rem;
+}
+
+.btn-primary {
+  background-color: #1db954;
+  color: #fff;
+
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-weight: bold;
+
+  padding: 15px 60px;
+  border: 0;
+  border-radius: 30px;
+
+  transition: all 200ms ease;
+}
+
+/* footer */
+
+#footer {
+  background: black;
+  color: white;
+
+  padding: 80px 0;
+}
+
+.footer-content {
+  display: flex;
+  width: 85%;
+  margin: auto;
+  justify-content: space-between;
+}
+
+.footer-content .footer-menu {
+  margin: 0 40px;
+  list-style: none;
+}
+
+.footer-menu-item {
+  margin: 25px 0;
+  font-size: 0.9rem;
+  transition: all 200ms ease;
+}
+
+.footer-content .footer-menu p {
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #919496;
+  font-size: 0.8rem;
+}
+
+.socials {
+  display: flex;
+}
+
+.socials i {
+  margin: 0;
+  padding: 0 20px;
+  font-size: 1.7rem;
+  transition: all 200ms ease;
+  height: 50px;
 
 }
 
+/* footer about */
+
+.footer-about {
+  display: flex;
+
+  justify-content: space-between;
+  align-items: flex-end;
+
+  width: 85%;
+  margin: auto;
+
+  font-weight: 300;
+  color: #919496;
+  font-size: 0.75rem;
+
+  padding-top: 60px;
+}
+
+.footer-about .about-items {
+  display: flex;
+  list-style: none;
+}
+
+.about-items .item {
+  margin: 0 10px;
+  transition: all 200ms ease;
+ 
+}
+
+.footer-about .rights .country {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.footer-about .rights .country .flag {
+  height: 20px;
+  width: auto;
+  display: inline-block;
+  margin-left: 10px;
+}
